edit header component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,11 +5,11 @@
   </div>
   <div class="menu-container">
     <ul id="menu">
-      <li class="item"><a routerLink="/" routerLinkActive="active">news</a></li> |
-      <li class="item"><a routerLink="/newest" routerLinkActive="active">newest</a></li> |
-      <li class="item"><a routerLink="/ask" routerLinkActive="active">ask</a></li> |
-      <li class="item"><a routerLink="/show" routerLinkActive="active">show</a></li> |
-      <li class="item"><a routerLink="/jobs" routerLinkActive="active">jobs</a></li>
+      <li class="item"><a routerLink="/">news</a></li> |
+      <li class="item"><a routerLink="/newest">newest</a></li> |
+      <li class="item"><a routerLink="/ask">ask</a></li> |
+      <li class="item"><a routerLink="/show">show</a></li> |
+      <li class="item"><a routerLink="/jobs">jobs</a></li>
     </ul>
   </div>
 </div>
