--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="menu-container">
     <ul id="menu">
-      <li class="item"><a routerLink="/">news</a></li> |
+      <li class="item"><a routerLink="/" [class.activated]="currentUrl == '/'">news</a></li> |
       <li class="item"><a routerLink="/newest">newest</a></li> |
       <li class="item"><a routerLink="/ask">ask</a></li> |
       <li class="item"><a routerLink="/show">show</a></li> |
